--- a/GC2025/HoraPratica2/style.css
+++ b/GC2025/HoraPratica2/style.css
@@ -40,17 +40,19 @@ body::before {
     position: relative;
 }
 
-
 .container__conteudo {
     display: flex;
     align-items: center;
-    position: absolute;
-    bottom: 0;
+    justify-content: center;
+    height: 100%; 
+    width: 100%; 
 }
 
 .container__informacoes {
-    flex: 1;
-    padding: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .container__botao {
@@ -61,11 +63,7 @@ body::before {
     font-size: 24px;
     font-weight: 700;
     border: none;
-    margin-top: 2rem;
-}
-
-button:disabled {
-    background-color: gray;
+    margin-top: 16px;
 }
 
 .container__texto {
@@ -76,36 +74,18 @@ button:disabled {
     color: #1875E8;
 }
 
-.container__input {
-    width: 100%;
-    height: 72px;
-    border-radius: 16px;
-    background-color: #FFF;
-    border: none;
-    color: #1875E8;
-    padding: 2rem;
-    font-size: 24px;
-    font-weight: 700;
-    font-family: 'Inter', sans-serif;
-}
-
-.container__botoes {
-    display: flex;
-    gap: 2em;
-}
-
 h1 {
     font-family: 'Chakra Petch', sans-serif;
     font-size: 72px;
-    padding-bottom: 3rem;
 }
 
+h2,
 p,
 button {
     font-family: 'Inter', sans-serif;
 }
 
-.texto__paragrafo {
+h2 {
     font-size: 32px;
     font-weight: 400;
 }
